--- a/HiStudent.com/Procfile
+++ b/HiStudent.com/Procfile
@@ -1,1 +1,1 @@
-java -Dserver.port=$PORT $JAVA_OPTS -jar target/mylahir.com-0.0.1-SNAPSHOT.jar
+java -Dserver.port=8084 $JAVA_OPTS -jar target/mylahir.com-0.0.1-SNAPSHOT.jar
