--- a/HiStudent.com/src/main/resources/application.properties
+++ b/HiStudent.com/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.jpa.hibernate-ddl = update
-
-spring.jpa.properties.hibernate.jdbc..llb.non_contextual_creation=true
-
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+spring.mvc.view.suffix:.jsp
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/lahir
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+server.port=8084
